client: avoid may_lookup for lookup . and lookup ..

Fixes: https://tracker.ceph.com/issues/23210
Signed-off-by: Jos Collin <jcollin@redhat.com>