src/client/Client.cc
@@ -10285,9 +10285,11 @@ int Client::ll_lookup(Inode *parent, const char *name, struct stat *attr,
   auto fuse_default_permissions = cct->_conf->get_val<bool>(
     "fuse_default_permissions");
   if (!fuse_default_permissions) {
-    r = may_lookup(parent, perms);
-    if (r < 0)
-      return r;
+    if (strcmp(name, ".") && strcmp(name, "..")) {
+      r = may_lookup(parent, perms);
+      if (r < 0)
+	return r;
+    }
   }
 
   string dname(name);
